[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Imagenes/menu.png" type="Texture" id=2]
[ext_resource path="res://Imagenes/xc.png" type="Texture" id=3]
[ext_resource path="res://font/Lucy Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Imagenes/restart.png" type="Texture" id=5]
[ext_resource path="res://Imagenes/menuuu.png" type="Texture" id=6]
[ext_resource path="res://Imagenes/off.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 4 )

[node name="GameOver" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 379.479, 679.068 )
scale = Vector2( 1.17119, 1.47093 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 535.265, 387.468 )
scale = Vector2( 1.37, 1.43 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 103.858
margin_top = 67.9068
margin_right = 597.858
margin_bottom = 257.907
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="PlayAgain" type="TouchScreenButton" parent="."]
position = Vector2( 83.8847, 491.326 )
scale = Vector2( 1.35, 1.35 )
normal = ExtResource( 5 )

[node name="Menu" type="TouchScreenButton" parent="."]
position = Vector2( 277.611, 701.035 )
scale = Vector2( 1.35, 1.35 )
normal = ExtResource( 6 )

[node name="Leave" type="TouchScreenButton" parent="."]
position = Vector2( 479.342, 890.778 )
scale = Vector2( 1.35, 1.35 )
normal = ExtResource( 7 )

[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_Leave_pressed"]
